--- a/holiholic_guide/pom.xml
+++ b/holiholic_guide/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>holiholic_follow</groupId>
-    <artifactId>holiholic_follow</artifactId>
+    <groupId>holiholic_guide</groupId>
+    <artifactId>holiholic_guide</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
